--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.example.pruebadosproyectoandres">
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,10 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PruebaDosProyectoAndres">
-
+        <activity
+            android:name=".MostrarDatosDespuesDeRegistro"
+            android:exported="false" />
         <activity
             android:name=".GalleryActivity"
             android:exported="true" />
+        <activity
+            android:name=".EnvioDelCorreo"
+            android:exported="false" />
+        <activity
+            android:name=".VerificacionDelCodigoParaRegistro"
+            android:exported="false" />
         <activity
             android:name=".MainActivityCliente"
             android:exported="true" />
@@ -30,14 +40,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".InterfazNuevaPublicacion" android:exported="false"
-                  android:parentActivityName=".MainActivityEmpresa">
-        </activity>
-        <activity android:name=".MainActivityEmpresa" android:exported="true">
+        <activity
+            android:name=".InterfazNuevaPublicacion"
+            android:exported="false"
+            android:parentActivityName=".MainActivityEmpresa" />
+        <activity
+            android:name=".MainActivityEmpresa"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
