--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation files('libs\\\\activation.jar')
+    implementation files('libs\\\\mail.jar')
+    implementation files('libs\\\\additionnal.jar')
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation files('libs\\json\\json-simple-1.1.jar')
